--- a/index.css
+++ b/index.css
@@ -11,9 +11,11 @@
 
 body, html {
     height: 100%;
+    width: 100%;
     margin: 0;
     display: grid;
     place-items: center;
+    backdrop-filter: blur(1px);
 }
 
 .title{
@@ -28,8 +30,24 @@ body, html {
     transition: 0.6s;
     background: transparent;
     color: rgb(0, 0, 0);
+    
 }
 
+.titleGameOver{
+    display: none;
+    opacity: 0;
+    font-size: 10vh;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 12.5%;
+    transform: translate(-50%, -50%);
+    transition: 0.6s;
+    background: transparent;
+    color: rgb(0, 0, 0);
+    white-space: nowrap;
+}
 
 .playBtn {
     display: flex;
@@ -47,6 +65,7 @@ body, html {
     cursor: pointer;
     font-size: 8vh;
     transition: 0.1s;  
+    z-index: 2;
 }
 
 .playBtn h4{
@@ -80,8 +99,6 @@ body, html {
     display: flex;
 }
 
-
-
 .zone{
     margin-inline: 0px;
     margin-bottom: 0px;
@@ -93,7 +110,6 @@ body, html {
     
 
 }
-
 
 .select{
     display: block;
@@ -113,8 +129,6 @@ body, html {
     background-color: rgb(228, 228, 228);
     transition-duration: 0.23s;
 }
-
-
 
 .redFlag{
     display: none;
@@ -146,15 +160,16 @@ html{
 }
 
 .infoText{
+    position: absolute;
     background: transparent;
-    backdrop-filter: blur(1vh);
+    backdrop-filter: blur(100px);
     margin: 0vh;
     border-radius: 3vh;
     color: rgb(237, 237, 237);
 }
 
 .infoText a{
-    color: #e7ff5f;
+    color: rgb(0, 34, 2);
     text-decoration: none;
 }
 
@@ -181,15 +196,47 @@ html{
     opacity: 1;
 }
 
+@keyframes fadeOut {
+    from{
+      opacity: 1;
+    }
+    to{
+      opacity: 0;
+    }
+  }
+
+  .fadeOutAnimacion{
+    animation: fadeOut 0.5s;
+    opacity: 0;
+  }
+
+  .exitGameBtn{
+    display: none;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+}
+
 .repeatGameBtn{
     display: none;
+    position: absolute;
+    top: 13%;
+    left: 5%;
+}
+
+.btnContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vh;
+}
+
+.btn{
     width: 7.5vh;
     height: 7.5vh;
     background: gainsboro;
     border-radius: 1vh;
-    position: absolute;
-    top: 12.8%;
-    left: 5%;
     background-size: cover;
     border: 0.4vh solid rgb(29, 29, 29);
     cursor: pointer;
@@ -207,10 +254,8 @@ background-color:rgb(255, 255, 255);
         .repeatImg{
             height: 5.5vh;
             width: 5.5vh;
-            top: 11%;
-            left: 7.5%;
+       
             background-color: transparent;
-            position: absolute;
             transition: 0.05s;
         }
 }
@@ -218,26 +263,10 @@ background-color:rgb(255, 255, 255);
 .repeatImg{
     height: 5.7vh;
     width: 5.7vh;
-    top: 10%;
-    left: 6%;
+    margin-top: 0.5vh;
+    margin-right: 0.5vh;
     background-color: transparent;
-    position: absolute;
     transition: 0.005s;
-}
-
-.exitGameBtn{
-    display: none;
-    width: 7.5vh;
-    height: 7.5vh;
-    background: gainsboro;
-    border-radius: 1vh;
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    background-size: cover;
-    border: 0.4vh solid rgb(29, 29, 29);
-    cursor: pointer;
-    transition: 0.3s;
 }
 
 .exitGameBtn:hover{
@@ -249,12 +278,9 @@ background-color:rgb(255, 255, 255);
     background: rgb(175, 175, 175);
     transition: 0.1s;
         .logOutImg{
-            height: 5.5vh;
+            height: 1.5vh;
             width: 5.5vh;
-            top: 13%;
-            left: 13%;
             background-color: transparent;
-            position: absolute;
             transition: 0.05s;
         }
 }
@@ -262,14 +288,11 @@ background-color:rgb(255, 255, 255);
 .logOutImg{
     height: 5.7vh;
     width: 5.7vh;
-    top: 11%;
-    left: 11%;
     background-color: transparent;
-    position: absolute;
     transition: 0.005s;
+    margin-top: 0.6vh;
+    margin-left: 0.4vh;
 }
-
-
 
 .exitGameWindow{
     margin: 0;
@@ -277,7 +300,7 @@ background-color:rgb(255, 255, 255);
     height: 30vh;
     background-color: rgb(142, 232, 255);
     position: absolute;
-    border: 0.7vh solid black;
+    border: 0.7vh solid rgb(39, 39, 39);
     border-radius: 10vh;
     display: none;
     justify-items: center;
@@ -302,7 +325,7 @@ background-color:rgb(255, 255, 255);
     position: absolute;
     border-radius: 4vh;
     font-size: 4.5vh;
-    border: 0.4svh solid black;
+    border: 0.4svh solid rgb(39, 39, 39);
     cursor: pointer;
     transition: 0.1s;
 
@@ -317,7 +340,7 @@ background-color:rgb(255, 255, 255);
     position: absolute;
     border-radius: 4vh;
     font-size: 4vh;
-    border: 0.4vh solid black;
+    border: 0.4vh solid rgb(39, 39, 39);
     cursor: pointer;
     transition: 0.1s;
 
@@ -345,7 +368,7 @@ background-color:rgb(255, 255, 255);
     height: 30vh;
     background-color: rgb(142, 232, 255);
     position: absolute;
-    border: 0.7vh solid black;
+    border: 0.7vh solid rgb(39, 39, 39);
     border-radius: 10vh;
     display: none;
     justify-items: center;
@@ -405,27 +428,21 @@ background-color:rgb(255, 255, 255);
     background-color: #a8ff96;
 }
 
+
+
 .volumeBtn{
     display: block;
-    width: 7.5vh;
-    height: 7.5vh;
-    background: gainsboro;
-    border-radius: 1vh;
     position: absolute;
     top: 5%;
     left: 90%;
-    background-size: cover;
-    border: 0.4vh solid rgb(29, 29, 29);
-    cursor: pointer;
-    transition: 0.3s;
 }
 
 .volumeBtn:hover{
     background-color:rgb(255, 255, 255);
     
-    }
+}
     
-    .volumeBtn:active{
+ .volumeBtn:active{
         background: rgb(175, 175, 175);
         transition: 0.1s;
             .volumeMuteImg{
@@ -446,15 +463,13 @@ background-color:rgb(255, 255, 255);
                 position: absolute;
                 transition: 0.05s;
             }
-    }
-
-
+}
 
 .volumeMuteImg{
     height: 5.7vh;
     width: 5.7vh;
-    top: 10%;
-    left: 6%;
+    top: 8%;
+    left: 8%;
     background-color: transparent;
     position: absolute;
     transition: 0.005s;
@@ -464,8 +479,8 @@ background-color:rgb(255, 255, 255);
 .volumeUpImg{
     height: 5.7vh;
     width: 5.7vh;
-    top: 10%;
-    left: 6%;
+    top: 8%;
+    left: 8%;
     background-color: transparent;
     position: absolute;
     transition: 0.005s;
